move readers and writers to dedicated types and mark old ones as deprecated